# WebGUI-HomeAutomationSystem_HAS

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  readmeTxt.txt
buil/: CMakeCache.txt  Makefile  WebGUI  cmake_install.cmake
include/: IO_interface.h  actuator.h  camera.h  central_manager.h  heater_controller.h  memory_interface.h  sensor.h  temp_sensor.h
src/: IO_interface.cpp  actuator.cpp  camera.cpp  central_manager.cpp  heater_controller.cpp  memory_interface.cpp  sensor.cpp  temp_sensor.cpp
tools/threadpool/: threadpool.cpp  threadpool.h
